--- a/CSS/TenDrum.css
+++ b/CSS/TenDrum.css
@@ -1158,7 +1158,7 @@ footer {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin: auto;
-  background-color: #EAB854;
+  background-color: #eab854;
   opacity: 0.8;
 }
 
@@ -1191,6 +1191,50 @@ footer {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.Facility .img-groups .img-teams {
+  width: 100%;
+  position: relative;
+}
+
+.Facility .img-groups .img-teams .bacimg-04 {
+  background-image: url("../img/設施/鞦韆_工作區域 1.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.Facility .img-groups .img-teams .overlay {
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  width: 0;
+  height: 100%;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.Facility .img-groups .img-teams .overlay .text-box {
+  width: 50%;
+  color: #3e3a39;
+  font-size: 24px;
+  position: absolute;
+}
+
+.Facility .img-groups .img-teams:hover .overlay {
+  width: 100%;
 }
 
 .Facility .img-groups .img-team {
@@ -1520,7 +1564,7 @@ a {
 .Rented .button-bar {
   height: calc(100vh - 30px);
   width: 20%;
-  background-color: antiquewhite;
+  background-color: #e9e1d3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1529,7 +1573,6 @@ a {
 .Rented .button-bar .button-g {
   height: 50%;
   width: 50%;
-  background-color: #2835e9;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1539,11 +1582,9 @@ a {
   text-align: center;
 }
 
-.Rented .button-bar .button-g .tittle {
+.Rented .button-bar .button-g .rented-tittle {
   height: 20%;
   width: 100%;
-  background-color: #4fe928;
-  font-size: 36px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1553,12 +1594,13 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  color: #673a1b;
+  font-weight: bolder;
 }
 
 .Rented .button-bar .button-g .lease-box {
   height: 20%;
   width: 100%;
-  background-color: #e9289f;
   font-size: 32px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1573,7 +1615,6 @@ a {
 
 .Rented .button-bar .button-g .lease-box .text-box {
   width: 80%;
-  background-color: chocolate;
   line-height: 36px;
   font-size: 30px;
   text-align: start;
@@ -1583,7 +1624,7 @@ a {
 .Rented .photo-R {
   height: calc(100vh - 30px);
   width: 80%;
-  background-color: #e95f28;
+  background-color: #e9e1d3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1607,7 +1648,7 @@ a {
 .Rented .photo-R .photo .swiper-container .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #a74444;
+  background: #e9e1d3;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1618,11 +1659,28 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
+}
+
+.Rented .photo-R .photo .swiper-container .swiper-slide .rented-img {
+  width: 80%;
+  height: 100%;
+}
+
+.Rented .photo-R .photo .swiper-container .swiper-slide .text-center {
+  padding: 5px;
+  background-color: rgba(177, 88, 33, 0.5);
+  color: #f7f8f8;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .Rented .photo-R .photo .swiper-container .swiper-pagination-bullet {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   background-color: #d89696;
 }
 
