--- a/CSS/_Facility.scss
+++ b/CSS/_Facility.scss
@@ -5,7 +5,7 @@
         display: flex;
         flex-wrap: wrap;
         margin: auto;
-        background-color: #EAB854;
+        background-color: #eab854;
         opacity: 0.8;
         .bag-img {
             position: absolute;
@@ -30,6 +30,42 @@
             margin-top: 50px;
             display: flex;
             flex-wrap: wrap;
+            .img-teams {
+                width: 100%;
+                position: relative;
+                .bacimg-04 {
+                    background-image: url("../img/設施/鞦韆_工作區域\ 1.png");
+                    background-position: center;
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                }
+                .overlay {
+                    position: absolute;
+                    z-index: 0;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+
+                    overflow: hidden;
+                    width: 0;
+                    height: 100%;
+                    transition: 0.5s ease;
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: flex-end;                    
+
+                    .text-box {
+                        width: 50%;
+                        color: #3e3a39;
+                        font-size: 24px;
+                        position: absolute;
+                        
+                    }
+                }
+            }
+            .img-teams:hover .overlay {
+                width: 100%;
+            }
             .img-team {
                 width: 33.33%;
                 display: flex;
@@ -39,6 +75,7 @@
                 &:hover {
                     cursor: pointer;
                 }
+
                 .image-circle {
                     width: 350px;
                     height: 350px;
