--- a/CSS/_apple-about.scss
+++ b/CSS/_apple-about.scss
@@ -486,7 +486,7 @@
     // 特色餐飲
     .sec-09 {
         width: 100%;
-        height: 100vh;
+        height: auto;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -679,7 +679,7 @@
         flex-wrap: wrap;
 
         margin-top: 250px;
-        margin-bottom: 50px;
+       
         position: relative;
         .title-10 {
             margin-top: 250px;
@@ -713,7 +713,6 @@
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
-
             .sec-10-img-group {
                 width: 33.33%;
                 height: 50%;
@@ -732,7 +731,7 @@
                     bottom: 0;
                     left: 0;
                     right: 0;
-                    background-color: #6A3906;
+                    background-color: #6a3906;
                     opacity: 0.8;
                     overflow: hidden;
                     width: 0;
@@ -760,7 +759,7 @@
                     bottom: 100%;
                     left: 0;
                     right: 0;
-                    background-color: #6A3906;
+                    background-color: #6a3906;
                     opacity: 0.8;
                     overflow: hidden;
                     width: 100%;
@@ -791,7 +790,7 @@
                     bottom: 0;
                     left: 100%;
                     right: 0;
-                    background-color: #6A3906;
+                    background-color: #6a3906;
                     opacity: 0.8;
                     overflow: hidden;
                     width: 0;
@@ -822,7 +821,7 @@
                     bottom: 0;
                     left: 0;
                     right: 0;
-                    background-color: #6A3906;
+                    background-color: #6a3906;
                     opacity: 0.8;
                     overflow: hidden;
                     width: 100%;
@@ -848,16 +847,14 @@
                 /* to top */
             }
         }
-        .footer {
-            width: 100%;
-            position: absolute;
-            bottom: 0;
-            background-color: rgba(177, 88, 33, 0.1);
-            height: 42px;
-            color: #595757;
-            text-align: center;
-            line-height: 42px;
-            z-index: 10;
-        }
     }
+}
+.footer {
+    width: 100%;
+
+    background-color: rgba(177, 88, 33, 0.1);
+    height: 42px;
+    color: #595757;
+    text-align: center;
+    line-height: 42px;
 }
